@@ -210,11 +210,14 @@ static const char *def_menu_cpu_speed[] =
     "cpu88-4",
     "cpu286-8",
     "cpu286-12",
+    "cpu286-25",
+    "cpu386-25",
     "cpu386-33",
     "cpu486-33",
     "cpu486-66",
     "cpu486-100",
     "cpu486-133",
+    "cpu586-60",
     "cpu586-66",
     "cpu586-75",
     "cpu586-90",
